// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple expense 1`] = `
<div>
  <h2>
    working
  </h2>
  <p>
    Viewing 
    34
     
    expenses
     totalling 
    $2.44
  </p>
</div>
`;

exports[`should render ExpenseSummary without expenses 1`] = `
<div>
  <h2>
    working
  </h2>
  <p>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </p>
</div>
`;
